[gd_scene load_steps=7 format=3 uid="uid://bxcgi5sxda15k"]

[ext_resource type="Script" uid="uid://bnir7qeqi7adn" path="res://scripts/pause_menu.gd" id="1_vjb58"]
[ext_resource type="Shader" uid="uid://do5lu3045pxod" path="res://assets/menublur.gdshader" id="1_yqeox"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vjb58"]
shader = ExtResource("1_yqeox")

[sub_resource type="Animation" id="Animation_con2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vjb58"]
resource_name = "new_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhnvy"]
_data = {
&"RESET": SubResource("Animation_con2f"),
&"new_animation": SubResource("Animation_vjb58")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vjb58")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -110.0
offset_right = 114.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Test" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Test"

[node name="Test2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Test2"

[node name="Test3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Test3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mhnvy")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Test2" to="." method="_on_test_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Test3" to="." method="_on_test_3_pressed"]
